# so-arm-ros

./: LICENSE.md  README.md
sc_servo/: CMakeLists.txt  README.md  package.xml
sc_servo/include/sc_servo/: SCS.hpp  SCSCL.hpp  SCSerial.hpp  SCServo.hpp  SMSBL.hpp  SMSCL.hpp  SMS_STS.hpp
sc_servo/src/: SCS.cpp  SCSCL.cpp  SCSerial.cpp  SMSBL.cpp  SMSCL.cpp  SMS_STS.cpp
sc_servo_examples/: CMakeLists.txt  README.md  package.xml
sc_servo_examples/src/: broadcast.cpp  feedback.cpp  ping.cpp  program_eprom.cpp  reg_write_pos.cpp  sync_write_pos.cpp  write_pos.cpp  write_pwm.cpp
so_arm_bring_up/: CMakeLists.txt  package.xml
so_arm_bring_up/launch/: so_arm.launch.py
so_arm_bring_up/rviz/: so_arm_moveit.rviz
so_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
so_arm_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  planning_pipelines.yaml  planning_scene_monitor.yaml  ros2_controllers.yaml  sensors.yaml  so_arm_101.ros2_control.xacro  so_arm_101.srdf  so_arm_101.urdf.xacro  trajectory_execution.yaml
so_arm_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
so_arm_config/rviz/: moveit.rviz
so_arm_controllers/: CMakeLists.txt  package.xml  so_arm_hardware_interface.xml
so_arm_controllers/include/so_arm_controllers/: joint_trajectory_controller.hpp
so_arm_controllers/src/: joint_trajectory_controller.cpp
so_arm_description/: CMakeLists.txt  package.xml
so_arm_description/launch/: so_arm_description.launch.py
so_arm_description/rviz/: so_arm.rviz
so_arm_description/urdf/: so_arm_101.urdf.xacro
so_arm_driver/: CMakeLists.txt  package.xml
so_arm_driver/include/so_arm_driver/: so_arm_data.hpp  so_arm_driver.hpp
so_arm_driver/src/: so_arm_driver.cpp
so_arm_driver/test/: joystick_controller.py  keyboard_controller.cpp  keybord_controller.py  so_arm_driver_test_node.cpp
so_arm_hardware_interface/: CMakeLists.txt  package.xml  so_arm_hardware_interface.xml
so_arm_hardware_interface/include/so_arm_hardware_interface/: arm_interface.hpp
so_arm_hardware_interface/src/: arm_interface.cpp
so_arm_manager/: CMakeLists.txt  package.xml
so_arm_manager/include/so_arm_manager/: manager.hpp  sync_client_caller.hpp
so_arm_manager/src/: main.cpp  manager.cpp
