<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_bring_up</name>
  <version>0.0.0</version>
  <description>Launch files to bring up the SO-Arm 101</description>
  <maintainer email="matheussousasf@gmail.com">Matheus Sousa Soares</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>so_arm_driver</depend>
  <depend>so_arm_config</depend>
  <depend>so_arm_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
