<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_description</name>
  <version>0.0.0</version>
  <description>Description of the SO-ARM100/101 robot</description>
  <maintainer email="matheussousasf@gmail.com">Matheus Sousa Soares</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
